# key-checker

./: .gitignore  99-key-checker.rules  README.md  icon-generate.py  index.html  package-lock.json  package.json  prepare-icon.py  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
