[package]
name = "key-checker"
version = "0.1.0"
description = "Keyboard Input Checker"
authors = ["you"]
edition = "2021"

[lib]
name = "key_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "key-checker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux: evdev-based global key hook
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
tokio = { version = "1", features = ["full"] }

# Windows: low-level keyboard hook
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
] }
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
