[package]
name = "key-checker"
version = "0.1.0"
description = "Keyboard Input Checker"
authors = ["you"]
edition = "2021"

[lib]
name = "key_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "key-checker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Linux/Windows 両対応のキー入力ライブラリ
rdev = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
